[tool.poetry]
name = "wtf"
version = "0.1.0"
description = "POST Console"
authors = ["John Aldrich Bernardo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
pygments = "^2.5.2"
colored = "^1.4.2"
pyinstaller = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
